--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ cssselect==0.9.2
 Flask==0.11.1
 Flask-Pure==0.3
 Flask-WTF==0.12
+gunicorn==19.6.0
 html2text==2016.5.29
 itsdangerous==0.24
 Jinja2==2.8
