--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,27 @@
+attrs==19.1.0
+certifi==2019.6.16
+chardet==3.0.4
 click==6.6
+colorclass==2.2.0
 cssselect==0.9.2
+docopt==0.6.2
 Flask==0.11.1
-Flask-Pure==0.3
+Flask-Pure==0.4
 Flask-WTF==0.12
 gunicorn==19.6.0
 html2text==2016.5.29
+idna==2.7
 itsdangerous==0.24
 Jinja2==2.8
 lxml==3.6.4
 MarkupSafe==0.23
-pyquery==1.2.13
-requests==2.11.1
-Werkzeug==0.11.10
+packaging==19.1
+pip-upgrader==1.4.15
+pyparsing==2.4.2
+pyquery==1.3.0
+requests==2.20.1
+six==1.12.0
+terminaltables==3.1.0
+urllib3==1.24.3
+Werkzeug==0.11.15
 WTForms==2.1
